backend: implementar gestao de nucleos
